# baby-signs

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  package-lock.json  package.json  tuono.config.ts
assets/views/: base.html
assets/views/home/: index.html
assets/views/signs/: create.html  edit.html  list.html  show.html
config/: development.yaml  test.yaml
examples/: playground.rs
migration/src/: lib.rs  m20250715_125307_signs.rs
src/: app.rs  cookie.rs  lib.rs  signs.rs
src/components/: NavBar.tsx  RandomSign.tsx  SignCard.tsx
src/controllers/: auth.rs  home.rs  mod.rs  signs.rs
src/fixtures/: signs.yaml
src/initializers/: view_engine.rs
src/models/: mod.rs  session.rs  sign.rs  signs.rs  users.rs
src/models/_entities/: mod.rs  prelude.rs  signs.rs
src/routes/: 404.tsx  __layout.tsx  index.tsx  signs.rs  signs.tsx
src/routes/api/: session.rs  signs.rs
src/routes/session/: [id].rs  [id].tsx  new.rs
src/styles/: global.css
src/views/: home.rs  mod.rs  signs.rs
tests/models/: mod.rs  signs.rs  users.rs
tests/requests/: auth.rs  prepare_data.rs
