[package]
name = "tuono-app"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "tuono"
path = ".tuono/main.rs"

[dependencies]
tuono_lib = "0.19.7"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.142"
uuid = { version = "1.18.0", features = ["v4"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
chrono = "0.4.41"
jsonwebtoken = "9.3.1"

